--- a/ext/bg/css/context.css
+++ b/ext/bg/css/context.css
@@ -18,7 +18,7 @@
 body {
     padding: 10px;
     margin: 0;
-    font-family: "Segoe UI", Tahoma, sans-serif;
+    font-family: 'Segoe UI', Tahoma, sans-serif;
     font-size: 14px;
 }
 
@@ -90,7 +90,7 @@ label {
     padding: 0;
 }
 .link-group-icon[data-icon=chevron]::after {
-    content: "";
+    content: '';
     display: block;
     width: 100%;
     height: 100%;
@@ -139,8 +139,8 @@ body[data-loaded=true] .toggle-group {
     display: block;
     padding: 6px 12px;
     font-size: 14px;
-    font-weight: 400;
-    line-height: 1.42857143;
+    font-weight: normal;
+    line-height: calc(20 / 14);
     text-align: center;
     white-space: nowrap;
     cursor: pointer;
@@ -203,7 +203,7 @@ body[data-loaded=true] .toggle-group {
     background-color: #ffffff;
     background-image: linear-gradient(#ffffff, #e0e0e0);
     background-repeat: repeat-x;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.15), 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 .toggle-off:focus,
 .toggle-off:hover,
@@ -215,7 +215,7 @@ body[data-loaded=true] .toggle-group {
 }
 .toggle-off:active,
 .toggle-handle:active {
-    background-color:#d4d4d4;
+    background-color: #d4d4d4;
     background-image: none;
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     border-color: #8c8c8c;
@@ -234,14 +234,13 @@ body[data-loaded=true] .toggle-group {
     border: 1px solid #cccccc;
     margin: 0;
     padding: 2px 3px;
-    margin: 0;
     cursor: pointer;
 }
 .nav-button+.nav-button {
     margin-left: -1px;
 }
 .nav-button::after {
-    content: "";
+    content: '';
     display: block;
     width: 16px;
     height: 16px;
