--- a/ext/bg/css/pitch-accents-preview.css
+++ b/ext/bg/css/pitch-accents-preview.css
@@ -27,7 +27,7 @@ body {
     overflow: hidden;
     width: 100%;
     height: 100%;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: calc(20 / 14);
 }
