--- a/ext/bg/css/popup-preview.css
+++ b/ext/bg/css/popup-preview.css
@@ -39,7 +39,7 @@ body {
     overflow: hidden;
     width: 100%;
     height: 100%;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 14px;
 }
 
